# PortfolioWebsite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  main.py  noxfile.py  package-lock.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: format_and_lint.yml
client/: __init__.py  environment.py  logger.py
routes/: __init__.py  blogs.py  index.py  profile.py
templates/: blog.html  blog_template.html  error.html  feedback-form.html  footer.html  headers.html  index.html  navbar.html  profile.html
templates/static/: helper.js  main.js  main.ts  markdown-dark.css  markdown-light.css  style.css
utils/: cache.py  constants.py  mail.py  models.py
