[tool.poetry]
name = "triyan"
version = "0.1.0"
description = ""
authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.0"}
uvicorn = "^0.20.0"
aiohttp = "^3.8.4"
Jinja2 = "^3.1.2"
humanfriendly = "^10.0"
types-humanfriendly = "^10.0.1.5"
types-PyYAML = "^6.0.12.6"
types-ujson = "^5.7.0.0"
bs4 = "^0.0.1"
PyGithub = "1.57"
python-dotenv = "^1.0.0"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
ruff = "^0.0.246"
pyright = "^1.1.294"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
